#
# Copyright (c) 2022 University of Colorado
# Licensed under the MIT license. See LICENSE.txt file in the MORIS root for details.
#
#------------------------------------------------------------------------------------
#

# FEM ---------------------------------------------------------------------
# -------------------------------------------------------------------------

# Add source directories
add_subdirectory(${INT})
add_subdirectory(${MDL})
add_subdirectory(${MSI})
add_subdirectory(${VIS})

