# MRS ---------------------------------------------------------------------
# -------------------------------------------------------------------------

# Add source directories
add_subdirectory(${ASR})
add_subdirectory(${CHR})
add_subdirectory(${CON})
add_subdirectory(${COR})
add_subdirectory(${EXC})
add_subdirectory(${IOS})
