#
# Copyright (c) 2022 University of Colorado
# Licensed under the MIT license. See LICENSE.txt file in the MORIS root for details.
#
#------------------------------------------------------------------------------------
#

# MRS ---------------------------------------------------------------------
# -------------------------------------------------------------------------

# Add source directories
add_subdirectory(${ASR})
add_subdirectory(${CHR})
add_subdirectory(${CON})
add_subdirectory(${COR})
add_subdirectory(${EXC})
add_subdirectory(${IOS})

