#
# Copyright (c) 2022 University of Colorado
# Licensed under the MIT license. See LICENSE.txt file in the MORIS root for details.
#
#------------------------------------------------------------------------------------
#

# SOL ---------------------------------------------------------------------
# -------------------------------------------------------------------------

# Add source directories
add_subdirectory(${SOL_CORE})
add_subdirectory(${DLA})
add_subdirectory(${NLA})
add_subdirectory(${TSA})

